# template_rust-rocket-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  docker-compose.yml
src/: database.rs  lib.rs  main.rs
src/models/: api_response.rs  cross_origin_resource_sharing.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: login.rs  mod.rs  register.rs  reset_password.rs
src/routes/user/: login.rs  register.rs
src/services/: hashing.rs  login_validity.rs  mod.rs
src/services/routes/: cross_origin_resource_sharing.rs
src/services/routes/api/: register.rs  reset_password.rs  upload_file.rs
src/services/routes/screens/: index.rs
src/utils/: login_validity.rs  mod.rs
static/css/: base.css  index.css
static/js/: hello.js
templates/: base.html.tera  index.html.tera
