[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.4"
rocket_cors = "0.6.0"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.serde]
version = "1.0"

[dependencies.sqlx]
version = "0.7"
