[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
rand = "0.8.5"
rocket_cors = "0.6.0"
rs-web-api-models = { path="../rs-web-api-models" } # TODO Change to GitHub link.
serde_json = "1.0.116"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.serde]
version = "1.0"

[dependencies.sqlx]
version = "0.7"
